Fix calls to new when registering a component installer.

Bug: 782065
Change-Id: I66964b0ff88ebb153e24af10a97f1efb83a3d0bd